add in-class notes

--- a/lessons/06_Differential_expression_analyses/02_DESEQ_start_analysis.Rmd
+++ b/lessons/06_Differential_expression_analyses/02_DESEQ_start_analysis.Rmd
@@ -153,9 +153,9 @@ We can extract the gene names and then do gene ontology
 ```{r extracting sig genes at P <0.05 and LFC > abs(1)}
 
 # printing out the gene_symbol column 
-cool_genes <- cat(paste(filtered_res_0_df_2$gene_symbol, collapse = "\n"))
+cool_genes <- cat(paste(filtered_res_0_df_2$gene_name, collapse = "\n"))
 
-cool_genes_12 <- as.data.frame(filtered_res_0_df_2$gene_symbol, collapse = "\n")
+cool_genes_12 <- as.data.frame(filtered_res_0_df_2$gene_name, collapse = "\n")
 
 # copy and paste into EnrichR 
 #https://maayanlab.cloud/Enrichr/
