--- a/lessons/07_visualization_figures/04_TPM_plots.Rmd
+++ b/lessons/07_visualization_figures/04_TPM_plots.Rmd
@@ -35,10 +35,10 @@ So take all of this with a grain of salt but is good to measure relative changes
 ```{r loading our RNAseq analysis data TPM & COUNTS}
 
 # load TPM RESULTS: 
-load("/scratch/Shares/rinnclass/MASTER_CLASS/lessons/06_Differential_expression_analyses/results/TPM_results/TPM_results.Rdata")
+load("/scratch/Shares/rinnclass/MASTER_CLASS/STUDENTS/fana6609/MASTER_CLASS/lessons/06_Differential_expression_analyses/results/TPM_results/TPM_results.Rdata")
 
 # laod DESEQ2 results
-load("/scratch/Shares/rinnclass/MASTER_CLASS/lessons/06_Differential_expression_analyses/results/counts_results_DESEQ/DESEQ_results.rdata")
+load("/scratch/Shares/rinnclass/MASTER_CLASS/STUDENTS/fana6609/MASTER_CLASS/lessons/06_Differential_expression_analyses/results/counts_results_DESEQ/DESEQ_results.rdata")
 
 ```
 
@@ -127,18 +127,18 @@ sig_gene_tpm <- sig_gene_tpm %>%
 ```{r TPM plot of gene of interest}
 
 # Picking a favorite gene
-gene_up <- as.data.frame(c("Gm9045"))
+gene_up <- as.data.frame(c("Neurod1"))
 
 names(gene_up) <- "gene_name"
 
 # indexing to just get values for this gene
-Gm9045_tpm <- sig_gene_tpm[sig_gene_tpm$gene_name %in% gene_up$gene_name, ]
+Neurod1_tpm <- sig_gene_tpm[sig_gene_tpm$gene_name %in% gene_up$gene_name, ]
 
 # now moving the character gene_name to rownames to won't interfere with numeric values
-rownames(Gm9045_tpm) <- Gm9045_tpm$gene_name
+rownames(Neurod1_tpm) <- Neurod1_tpm$gene_name
 
 # removing text column
-Gm9045_tpm <- Gm9045_tpm %>%
+Neurod1_tpm <- Neurod1_tpm %>%
   select(-gene_name) 
 
 # Ok this is typical data wrangling now let's plot !
@@ -154,15 +154,15 @@ We will do that next.
 
 # We now need to futher prepare our data :)
 # Let's get a variable for col names to plot
-avg_cols <- grep("_avg", names(Gm9045_tpm), value = TRUE)
+avg_cols <- grep("_avg", names(Neurod1_tpm), value = TRUE)
 
-sd_cols <- grep("_sd", names(Gm9045_tpm), value = TRUE)
+sd_cols <- grep("_sd", names(Neurod1_tpm), value = TRUE)
 
 # This is another way to "melt" or pivot longer
 plot_df <- data.frame(
   time = as.numeric(gsub("_avg", "", avg_cols)),
-  avg = unlist(Gm9045_tpm[avg_cols]),
-  sd = unlist(Gm9045_tpm[sd_cols])
+  avg = unlist(Neurod1_tpm[avg_cols]),
+  sd = unlist(Neurod1_tpm[sd_cols])
 )
 
 # NOW THE PLOT !
